WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
299066
[Smart Lists] Smart Lists should not be activated if selection is already within a list
https://bugs.webkit.org/show_bug.cgi?id=299066
Summary
[Smart Lists] Smart Lists should not be activated if selection is already wit...
Richard Robinson
Reported
2025-09-17 20:56:47 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-09-17 20:56:59 PDT
<
rdar://problem/160826918
>
Richard Robinson
Comment 2
2025-09-17 20:59:01 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/50911
EWS
Comment 3
2025-09-18 08:24:12 PDT
Committed
300158@main
(d4cc14a231ea): <
https://commits.webkit.org/300158@main
> Reviewed commits have been landed. Closing PR #50911 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug