[Smart Lists] Smart Lists should not be activated if selection is already within a list https://bugs.webkit.org/show_bug.cgi?id=299066 rdar://160826918

Reviewed by Abrar Rahman Protyasha and Lily Spiniolas.

Before allowing a Smart List to be created, first check if the selection is already within a list and exit early if so.

* Source/WebCore/editing/InsertTextCommand.cpp:
(WebCore::InsertTextCommand::applySmartListsIfNeeded):

Add new guard condition to check for an enclosing list.

* Tools/TestWebKitAPI/Tests/WebKitCocoa/SmartLists.mm:
(TEST(SmartLists, InsertingSpaceAndTextAfterBulletPointGeneratesListWithText)):
(InsertingSpaceAndTextAfterHyphenGeneratesDashedList)):
((SmartLists, InsertingSpaceAfterBulletPointInMiddleOfSentenceDoesNotGenerateList)):
((SmartLists, InsertingSpaceAfterPeriodAtStartOfSentenceDoesNotGenerateList)):
((SmartLists, InsertingSpaceAfterNumberGeneratesOrderedList)):
((SmartLists, InsertingSpaceAfterMultipleDigitNumberGeneratesOrderedList)):

Drive-by formatting fix for consistency

((SmartLists, InsertingSpaceInsideListElementDoesNotActivateSmartLists)):

New test added

Canonical link: https://commits.webkit.org/300158@main